--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/font.css);
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
@@ -36,5 +37,21 @@
 @import url(../blocks/popup/__error/popup__error_active.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/popup-image.css);
+@import url(../blocks/popup/__tooltip-header/popup__tooltip-header.css);
+@import url(../blocks/popup/__tooltip-image/popup__tooltip-image.css);
+@import url(../blocks/popup/__tooltip-content/popup__tooltip-content.css);
 @import url(../blocks/profile/__avatar-overlay/profile__avatar-overlay.css);
 @import url(../blocks/element/__like-counter/element__like-counter.css);
+@import url(../blocks/auth/auth.css);
+@import url(../blocks/auth/__container/auth__container.css);
+@import url(../blocks/auth/__form/auth__form.css);
+@import url(../blocks/auth/__heading/auth__heading.css);
+@import url(../blocks/auth/__input/auth__input.css);
+@import url(../blocks/auth/__submit-button/auth__submit-button.css);
+@import url(../blocks/auth/__tip/auth__tip.css);
+@import url(../blocks/auth/__link/auth__link.css);
+@import url(../blocks/auth/__submit-button/_inactive/auth__submit-button_inactive.css);
+@import url(../blocks/header/__auth/header__auth.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__profile-info/header__profile-info.css);
+@import url(../blocks/header/__sighout-button/header__signout-button.css);
