--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -11,6 +11,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;  
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1160px) {
